all done except check password
