# backend/controllers/Default.js
@@ -172,3 +172,13 @@ module.exports.getAllUsers = function getAllUsers (req, res, next) {
       utils.writeJson(res, response);
     });
 };
+
+module.exports.createNewUser = function createNewUser (req, res, next, body) {
+  Default.createNewUser(body)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
